--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,83 @@
 /EstateAgency
 /js
 /lib
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Composer
+/vendor/
+composer.lock
+
+# Node.js
+/node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# XAMPP ve Apache
+/xampp/
+/apache/
+*.log
+error_log
+access_log
+
+# PHP
+*.php~
+*.bak
+*.swp
+*.swo
+*.cache
+*.log
+php_errors.log
+
+# Veritabanı
+*.sql
+*.sqlite
+*.db
+
+# Resim ve medya dosyaları
+/img/properties/*
+!/img/properties/.gitkeep
+/admin/images/*
+!/admin/images/.gitkeep
+
+# Geçici dosyalar
+*.tmp
+*.temp
+*.cache
+*.bak
+*.backup
+
+# Sistem dosyaları
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Ortam değişkenleri
+.env
+.env.local
+.env.*.local
+
+# Derleme çıktıları
+/build/
+/dist/
+*.min.js
+*.min.css
+
+# Test dosyaları
+/tests/
+*.test.php
+*.spec.php
+
+# Diğer
+*.zip
+*.tar
+*.gz
+*.rar
+*.7z
